--- a/estilos.css
+++ b/estilos.css
@@ -46,13 +46,59 @@ main{
     padding: 20px;
     overflow: hidden;
 }
+
+.card{
+  width: calc(33.33% - 20px);
+  height: 450px;
+  margin: 10px;
+  padding: 20px;
+  background-color: #dfdea5;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  float: left;
+}
+
+.card img {
+  max-width: 100%; 
+  height: 300px; 
+}
+
+.card button {
+  background-color: #a09f6a;
+  border-color: #fff;
+  border-radius: 5px;
+  border-width: 3px;
+}
+
+.card button:hover {
+  background-color: #80804c;
+}
+
+footer {
+  background-color: #80804c;
+  color: #fff;
+  text-align: center;
+  padding: 1rem;
+}
+
+@media screen and (max-width: 768px) {
+  .card {
+      width: calc(50% - 20px); /* 50% - 40px */
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .card {
+      width: 100%;
+  }
+}
+
   
   #app {
     text-align: center;
-    background-color: #fff;
+    background-color: #fffec3;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
   
   #cart, #products {
@@ -72,14 +118,20 @@ main{
   
   button {
     padding: 10px;
-    background-color: #4caf50;
+    background-color: #a09f6a;
     color: #fff;
     border: none;
     border-radius: 4px;
     cursor: pointer;
   }
+
+  button a {
+    text-decoration: none;
+    color: #fff;
+  }
   
   button:hover {
-    background-color: #45a049;
+    background-color: #80804c;
+    transition: 0.5s;
   }
   
